<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/edt_target_ip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/edt_target_ip" />

    <Button
        android:id="@+id/btn_start_listener_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_target_ip"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_start_listener_service" />

    <Button
        android:id="@+id/btn_close_listener_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_start_listener_service"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_close_listener_service" />

    <Button
        android:id="@+id/btn_send_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_start_listener_service"
        android:layout_toLeftOf="@id/btn_close_listener_service"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_send_info" />

    <TextView
        android:id="@+id/txt_current_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_close_listener_service"
        android:layout_centerHorizontal="true" />

	<ImageView
	    android:id="@+id/iv_dialog_pic"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
	    android:contentDescription="@string/iv_dialog_pic"
	    android:src="@drawable/android"
	    android:visibility="invisible" />

</RelativeLayout>

